// RST (Relation Symbol Table) - A simplified code intelligence format for LLM navigation.
//
// This format provides a lightweight representation of symbol relationships,
// extracted from SCIP indexes for efficient code navigation.

syntax = "proto3";

package rst;

option go_package = "github.com/sourcegraph/scip/cmd/scip/rst";

// RST is the root message for a Relation Symbol Table
message RST {
  Metadata metadata = 1;
  map<string, Document> documents = 2;
}

message Metadata {
  string repo = 1;      // Repository identifier (e.g., github.com/sourcegraph/scip)
  string language = 2;  // Primary language of this RST file
}

message Document {
  string relative_path = 1;
  map<string, Symbol> symbols = 2;
}

message Symbol {
  string symbol = 1;           // Full SCIP symbol
  string kind = 2;             // Symbol kind (FUNC, STRUCT, METHOD, etc.)
  string documentation = 3;    // Documentation string
  repeated string reference_by = 4;  // Symbols that reference this symbol
  repeated string dependence_on = 5; // Symbols this symbol depends on
}
